# GlExample

./: CMakeLists.txt
resources/shaders/: basic.shader  simple.frag  simple.vert
src/: main.cpp
